--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -26,6 +26,11 @@
             overflow: hidden;
         }
 
+        .table-wrapper {
+            overflow-x: auto;
+            overflow-y: visible;
+        }
+
         h1 {
             padding: 20px 30px;
             border-bottom: 1px solid #ddd;
@@ -37,6 +42,8 @@
         table {
             width: 100%;
             border-collapse: collapse;
+            min-width: 880px;
+            table-layout: fixed;
         }
 
         thead {
@@ -45,19 +52,60 @@
         }
 
         th {
-            padding: 12px 30px;
+            padding: 12px 15px;
             text-align: left;
             font-size: 0.85em;
             font-weight: 600;
             color: #666;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+            white-space: nowrap;
         }
 
         td {
-            padding: 16px 30px;
+            padding: 16px 15px;
             border-bottom: 1px solid #eee;
             font-size: 0.95em;
+        }
+
+        /* Block Number column */
+        th:nth-child(1), td:nth-child(1) {
+            width: 120px;
+            min-width: 120px;
+        }
+
+        /* Block Hash column */
+        th:nth-child(2), td:nth-child(2) {
+            width: 250px;
+            min-width: 250px;
+            max-width: 250px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        /* Extra Data column */
+        th:nth-child(3), td:nth-child(3) {
+            width: 250px;
+            min-width: 250px;
+            max-width: 250px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+
+        /* Transactions column */
+        th:nth-child(4), td:nth-child(4) {
+            width: 120px;
+            min-width: 120px;
+            text-align: center;
+        }
+
+        /* Flashblocks column */
+        th:nth-child(5), td:nth-child(5) {
+            width: 120px;
+            min-width: 120px;
+            text-align: center;
         }
 
         tr:hover {
@@ -215,18 +263,20 @@
 
         <div id="loading" class="loading">Loading blocks...</div>
 
-        <table id="blocks-table" style="display: none;">
-            <thead>
-                <tr>
-                    <th>Block Number</th>
-                    <th>Block Hash</th>
-                    <th>Extra Data</th>
-                    <th>Transactions</th>
-                    <th>Flashblocks</th>
-                </tr>
-            </thead>
-            <tbody id="blocks-body"></tbody>
-        </table>
+        <div class="table-wrapper">
+            <table id="blocks-table" style="display: none;">
+                <thead>
+                    <tr>
+                        <th>Block Number</th>
+                        <th>Block Hash</th>
+                        <th>Extra Data</th>
+                        <th>Transactions</th>
+                        <th>Flashblocks</th>
+                    </tr>
+                </thead>
+                <tbody id="blocks-body"></tbody>
+            </table>
+        </div>
     </div>
 
     <div id="details-modal" class="details-modal">
